--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ before_install:
     - ls
     - "curl -vLJO -H 'Accept: application/octet-stream' \"https://github.com/SalesforceFoundation/ApexDoc/releases/download/1.1.7/apexdoc.jar\""
     - ls
+
+script:
+    - ls
