--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+language: java
+
+jdk:
+  - oraclejdk8
+
 before_install:
     - java -version
     - "curl -vLJO -H 'Accept: application/octet-stream' \"https://github.com/SalesforceFoundation/ApexDoc/releases/download/1.1.7/apexdoc.jar\""
