--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
     - ls
     - chmod 777 scripts/document.sh
     - ./scripts/document.sh
-    - ls
+    - ls documentation
 
 after_install:
     - ls documentation
