--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
-language: java
+language:
+    - java
+    - python
 
 jdk:
     - oraclejdk8
 
 python:
     - "3.5"
+
+install: "pip install -r requirements.txt"
 
 env:
     global:
