--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ script:
     - ls documentation/ApexDocumentation
 
 after_success:
-    - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash deploy.sh
+    - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash scripts/deploy.sh
