--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,20 @@
 language:
 - java
+
 jdk:
 - oraclejdk8
+
 before_install:
-- java -version
 - 'curl -vLJO -H ''Accept: application/octet-stream'' "https://github.com/SalesforceFoundation/ApexDoc/releases/download/1.1.7/apexdoc.jar"'
-- mkdir ~/documentation
-- ls
-- ls ~/
-- pwd
-- ls
+- mkdir documentation
+
+
 script:
 - ls
 - chmod 700 scripts/document.sh
 - ./scripts/document.sh
 - ls documentation/ApexDocumentation
+
 after_success:
 - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash
   scripts/deploy.sh
